styles/style.css
html,body{
	border: 0;
	font: inherit;
	font-size: 100%;
	margin: 0;
	padding: 0;
    background-color: white;
    color: #7F1F22;
}

#sticky_header {
	position: fixed;
	top: 0;
	width: 100%;
}

#banner {
	text-align: center;
    color: white;
    text-shadow: -1.5px 0 #d3bb3d, 0 1.5px #d3bb3d, 1.5px 0 #d3bb3d, 0 -1.5px #d3bb3d;
	padding: 0.8em;
	width: 100%;
    background-image: url(../images/apples_banner.jpg)
}

#banner h1 {
    padding-top: 0.1em;
    padding-bottom: 0em;
    margin: 0em;
    font-family: 'Montserrat', sans-serif;
}

#banner h3 {
    padding-top: 0em;
    padding-bottom: 0.2em;
    margin: 0em;
    color: white;
    font-family: 'Montserrat', sans-serif;
}

#nav_bar {
	text-align: left;
    height: 1.4em;
	width: 100%;
	padding: 0.5em;
    background-color: #ca3136;
    color: white;
    font-family: 'Open Sans', sans-serif;
    font-size:100%;
}

#nav_bar a {
    text-decoration: none;
    color: white;
}

.navspan {
	padding: 0.8em;
}

#main {
    float:left;
	margin-top: 10em;
	margin-right: auto;
	margin-left: 3em;
	width: 75%;
    font-size: 100%;
}

#main h1, h2, h3, h4 {
    font-family: 'Montserrat', sans-serif;
    color: #ca3136;
}

#main p {
    font-family: 'Open sans', sans-serif;
}

#main p span {
    font-weight: bolder;
}

#twitfeed {
    float:right;
    width:18%;
    margin-top: 9.2em;
    margin-right: auto;
    margin-left:auto;
}

/** Social Media css */

#sm {
    float: right;
}

#sm-content {
    padding-right: 2em;
    padding-left: 1em;
}

#sm-content ul li {
    display: inline-block;
    height: 2em;
    border-right: 1px dashed #a7a7a7;
}

#sm-content ul li a {
    display: block;
    width: 100%;
    height: 100%;
}

#sm-content ul li span {
    visibility: hidden;
}

.facebook {
    width: 50px;
    height: 50px;
    background: url(../images/facebook.jpeg) no-repeat center center;
    padding: 0 10px;
}

.twitter {
    width: 50px;
    height: 50px;
    background: url(../images/twitter.jpeg) no-repeat center center;
    padding: 0 10px;
}

.youtube {
    width: 50px;
    height: 50px;
    background: url(../images/youtube.jpeg) no-repeat center center;
    padding: 0 10px;
    border-right: none !important;
}

#twitterm{
    display:none;
}

/**index.php css */

#photo1 {
    float: left;
    width:31%;
    margin-left: 3%;
}

#photo2 {
    float: left;
    width:34%;
}

#photo3 {
    float: left;
    width:30%;
}

#content {
	display: inline-block;
}

/** Vendors.php */

#vendors-content{
    margin-top: -1.3em;
    width: 90%;
    margin-left: 5%;
}

#vendors-content h2{
    text-align: center;
    border: 2px solid #ca3136;
    border-radius: 5px;
}

#vendors-content .name{
    font-weight: bold;
    margin-bottom: -0.9em;
}

#vendors-content ul {
    padding-left: 2em;
    padding-right: 2em;
}

#vendors-food {
    float: left;
    width: 48%;
}

#vendors-crafts {
    float: right;
    width: 48%;
}

/**Events.php css */

#events-content{
    margin-top: -1.3em;
    width: 92%;
    margin-left: 5%;
}

#events-content h2{
    text-align: center;
    border: 2px solid #ca3136;
    border-radius: 5px;
}

#events-content h4 {
    padding-left: 1em;
}

#events-content ul {
    padding-left: 3em;
    padding-right: 2em;
}

#otherstage-content {
    float: right;
    width: 50%;
}

#mainstage-content {
    float: left;
    width: 48%;
}

.saturday, .sunday{
    font-weight: bold;
} 

/** Gallery.php css */

#galleryphotos {
    width: 95%;
    margin-left: 12%;
}

/** Transportation.php css */

#map{
    float: left;
    width:63%;
}

#map iframe {
    width:100% !important;
}

#tcat {
    float:right;
    width:37%;
    margin-top: -1.5em;
}

#tcat h2{
    text-align: center;
}

/** Contact.php css */

#contact-content {
    float:left;
    width: 75%;
    margin-left: 1%;
}

#dia-img {
    margin-top:2em;
    float:right;
    width:20%;
}

.transportation {
    border-collapse:collapse;
    border-spacing: 0;
    font-family: 'Open sans', sans-serif;
    margin: auto;
    margin-top: 1.5em;
}

.transportation th, td {
    border: 1px solid;
    padding: 0.75em;
    text-align: center;
}

/*********/
/* split between styling and media queries */
/******/ 

@media screen and (min-width: 0px) and (max-width: 480px) {
    
    html,body {
        font-size: 90%;
        overflow: hidden;
    }
    
    #sticky_header {
	position: absolute;
    }
   
    #banner{
        height: 4em;
        text-shadow: -1.0px 0 #d3bb3d, 0 1.0px #d3bb3d, 1.0px 0 #d3bb3d, 0 -1.0px #d3bb3d;
        text-align: left
    }

    #sm{
        margin-top: -4.4em;
        margin-right:0.6em;
    }

    #sm-content {
        padding-right: 0em;
        padding-left: 0em;
    }

    #sm-content ul li {
        display: inline-block;
        height: 2.5em;
        border-right: none;
    }

    .facebook{
        padding: 0 0px;
    } 
    .twitter{
        padding: 0 0px;
    } 
    .youtube{
        padding: 0 0px;
    }

    #nav_bar{
        padding-bottom: 8em;
        width:100%;
        align-content: center;
    }
    
    #nav_bar a{
        text-align: center;
    }
    
    .navspan {
        font-size: 0.8em;
        padding-bottom: 0.2em;
        padding-top: 0.2em;
        display: block;
        text-align: center;
        border-bottom: 0.1em Solid white;
    }
    
    #main {
        width: 85%;
        padding-right: 0.5em;
        padding-left: 0.5em;
        margin-top: 17em;
        margin-left: 1em;
    }
    
    #content h1 {
        text-align: center;
        margin-bottom: 0em;
    }
    
    #photo1 {
        display: none;
    }

    #photo2 {
        margin-right: 2.75em;
        margin-left: 2.75em;
    }

    #photo3 {
        display: none;
    }

    #sm-content {
        display: inline;
    }

    #twitfeed {
        display:none;
    }

    #twitterm{
        display:block;
    }

    #galleryphotos{
        width:100%;
        margin-left:12%;
    }

    #map{
        width:95%;
        margin-bottom: 2em;
        margin-left:5%;
    }

    #tcat{
        width:100%;
    }

    #contact-content{
        width:100%;
    }

    #dia-img {
    margin-top:2em;
    float:left;
    width:100%;
    }
}

